入力チェックと文字列の外部化

--- a/modules/frontweb/src/main/resources/templates/home.html
+++ b/modules/frontweb/src/main/resources/templates/home.html
@@ -2,21 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Home Page</title>
+    <title th:text="#{home.title}">Home</title>
     <link th:href="@{/css/content.css}" rel="stylesheet">
 </head>
 
 <body>
     <span th:text="${hello}"></span>
     <form th:action="@{/logout}" method="post">
-        <button>ログアウト</button>
+        <button th:text="#{common.logout}">Logout</button>
     </form>
     <hr>
     <h3>TODO</h3>
-    <a th:href="@{/todo/}">編集</a>
+    <a th:href="@{/todo/}" th:text="#{common.edit}">Edit</a>
     <table class="todo-list">
         <tr>
-            <th>件名</th>
+            <th th:text="#{todo.common.title}">Title</th>
         </tr>
         <tr th:each="todo : ${todoList}">
             <td th:text="${todo.todoTitle}">title1</td>
