--- a/modules/frontweb/src/main/resources/templates/todo/todoCreateInput.html
+++ b/modules/frontweb/src/main/resources/templates/todo/todoCreateInput.html
@@ -3,21 +3,29 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>TODO新規作成</title>
+    <title th:text="#{todo.create.input.title}">Add New TODO</title>
     <link th:href="@{/css/content.css}" rel="stylesheet">
 </head>
 
 <body>
-    <h2>TODO新規作成</h2>
-    <form th:action="@{/todo/create/confirm}" th:method="post" th:object="${todoForm}">
-        <table>
-            <tr>
-                <td>件名</td>
-                <td><input type="text" th:field="*{todoTitle}"></td>
-            </tr>
-        </table>
-        <button onclick="document.cancelForm.submit(); return false;">キャンセル</button>
-        <button>確認</button>
+    <h2 th:text="#{todo.create.input.title}">Add New TODO</h2>
+
+    <!--
+        Memo: formの外でエラーをまとめて出力する方法。
+        <div th:errors="*{todoForm.*}" class="error-message-list"></div>
+    -->
+    <form th:action="@{/todo/create/confirm}" th:method="post" th:object="${todoForm}" class="form-horizontal">
+        <!--
+            Memo: formの中でエラーをまとめて出力する方法。
+            <div th:errors="*{all}" class="error-message-list"></div>
+        -->
+        <label th:for="todoTitle" name="todoTitle" th:errorclass="error-label" th:text="#{todo.common.title}">Title</label>
+        <input type="text" th:field="*{todoTitle}" th:errorclass="error-input">
+        <span th:errors="*{todoTitle}" class="error-messages"></span>
+        <br>
+
+        <button onclick="document.cancelForm.submit(); return false;" th:text="#{common.cancel}">Cancel</button>
+        <button th:text="#{todo.common.confirm}">Confirm</button>
     </form>
     <form th:action="@{/todo/create/cancel}" name="cancelForm"></form>
 </body>
